# truscanner

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  convert_sinks.py  main.py  package-lock.json  patch_sinks.py  pyproject.toml  requirements.txt  scan_report.txt  test.py  truscanner-demo.yml
.github/workflows/: test.yml
Reports/mars-money-nexus-platform/: truscan_report.json  truscan_report.md  truscan_report.txt
data-elements/: personal_identification.json
data_elements/: audio_visual_sensory_data_sources.json  authentication_credentials.json  authentication_credentials_data_sources.json  communication_behavioral_data.json  communication_behavioral_data_sources.json  contact_information.json  content_consumption_media_data.json  content_consumption_media_data_sources.json  credit_risk_assessment_data.json  credit_risk_assessment_data_sources.json  device_technology_data.json  device_technology_data_sources.json  digital_online_identifiers.json  digital_online_identifiers_data_sources.json  ecommerce_shopping_data.json  ecommerce_shopping_data_sources.json  educational_academic_data.json  educational_academic_data_sources.json  employment_professional_data.json  employment_professional_data_sources.json  financial_payment_data.json  financial_payment_data_sources.json  gaming_entertainment_data_sources.json  gaming_entertainment_specific_data.json  government_issued_identifiers.json  health_biometric_data.json  health_biometric_data_sources.json  insurance_protection_data.json  insurance_protection_data_sources.json  investment_trading_data.json  investment_trading_data_sources.json  legal_compliance_data.json  legal_compliance_data_sources.json  location_geospatial_data.json  location_geospatial_data_sources.json  logistics_delivery_data.json  logistics_delivery_data_sources.json  marketing_analytics_data.json  marketing_analytics_data_sources.json  matrimonial_dating_data_sources.json  (+17 more)
reports/PostgreSQL_postgres/: db_scan_report.json  db_scan_report.txt  db_scan_report1.json  db_scan_report1.txt  db_scan_report2.json  db_scan_report2.txt
scripts/: check_truscanner_api.py
sinks/: app_storage.json  cookies.json  database.json  file_io.json  web_storage.json
sinks/internal_apis/api/: csharp.json  go.json  java.json  javascript.json  python.json  ruby.json
sinks/miscellaneous/threats/: java.json
sinks/storages/airflow/: python.json
sinks/storages/amazonS3/: go.json  java.json  javascript.json  php.json  python.json
sinks/storages/arangodb/: go.json  java.json  javascript.json  (+1 more)
src/: __init__.py  ai_parser.py  ai_scanner.py  api_client.py  main.py  regex_scanner.py  report_utils.py  scanner.py  token_utils.py  utils.py
src/database/: __init__.py  connector.py  db_report.py  db_scanner.py  ui.py
src/providers/: __init__.py  base.py  bedrock.py  ollama.py  openai.py
test_scanner/: test_file.js  test_scan.py
tests/: .env.example  conftest.py  test_ai_scanner_parser.py  test_content_scanning.py  test_file_extension_filtering.py  test_main_cli.py  test_providers.py  test_python_api.py  test_regex_scanner.py  test_report_utils.py  test_utils.py
truscanner/: __init__.py  api.py
(+2385 files in other folders)
