[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truscanner"
version = "0.2.3"
description = "Open-Source Static Analysis for Privacy Data Flows"
readme = "README.md"
authors = [
    { name = "truconsent", email = "hello@truconsent.io" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "openai>=1.0.0",
    "presidio-analyzer>=2.2.0",
    "inquirer>=3.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "twine",
    "build",
    "hatchling",
]

[project.scripts]
truscanner = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "data_elements"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/data_elements",
    "/README.md",
    "/LICENSE",
]