[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truscanner"
version = "0.2.4"
description = "Open-Source Static Analysis for Privacy Data Flows"
readme = "README.md"
authors = [
    { name = "truconsent", email = "hello@truconsent.io" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "openai>=1.0.0",
    "inquirer>=3.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.1.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "twine",
    "build",
    "hatchling",
]
postgresql = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.0.0"]
mariadb = ["pymysql>=1.0.0"]
oracle = ["oracledb>=1.0.0"]
mssql = ["pymssql>=2.2.0"]
aurora = ["psycopg2-binary>=2.9.0", "pymysql>=1.0.0"]
snowflake = ["snowflake-sqlalchemy>=1.5.0"]
all-databases = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "oracledb>=1.0.0",
    "pymssql>=2.2.0",
    "snowflake-sqlalchemy>=1.5.0",
]

[project.scripts]
truscanner = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "data_elements"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/data_elements",
    "/README.md",
    "/LICENSE",
]