[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truscanner"
version = "0.2.9"
description = "Open-Source Static Analysis for Privacy Data Flows"
readme = "README.md"
authors = [
    { name = "truconsent", email = "hello@truconsent.io" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8,<9.0.0",
    "openai>=1.0.0,<2.0.0",
    "boto3>=1.34.0,<2.0.0",
    "inquirer>=3.1.0,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "ollama>=0.1.0,<1.0.0",
    "loguru>=0.7.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "twine",
    "build",
    "hatchling",
    "pytest>=8.0.0",
]

[project.scripts]
truscanner = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "data_elements", "truscanner"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/truscanner",
    "/data_elements",
    "/README.md",
    "/LICENSE",
]
